Git Ignore Added

--- a/buspass-ws-master/.gitignore
+++ b/buspass-ws-master/.gitignore
@@ -9,3 +9,15 @@
 *.classpath
 *.project
 *.settings
+logs
+target
+tmp
+.history
+dist
+/.idea
+/*.iml
+/out
+/.idea_modules
+conf/custom.conf
+/bin/
+.cache-*
