--- a/buspass-ws-master/pom.xml
+++ b/buspass-ws-master/pom.xml
@@ -20,15 +20,6 @@
 		<url>http://www.scattercode.co.uk/</url>
 	</organization>
 
-	<developers>
-		<developer>
-			<id>smasters</id>
-			<name>Stephen Masters</name>
-			<email>steve@scattercode.co.uk</email>
-			<organization>Scattercode Ltd</organization>
-			<timezone>Europe/London</timezone>
-		</developer>
-	</developers>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -77,8 +68,16 @@
 
 	</dependencies>
 	<build>
-
 		<plugins>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
