--- a/buspass-ws-master/pom.xml
+++ b/buspass-ws-master/pom.xml
@@ -66,6 +66,14 @@
 			<version>${kie.version}</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.json/json -->
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20160810</version>
+		</dependency>
+
+
 	</dependencies>
 	<build>
 		<plugins>
