Stavke racuna drools done

--- a/buspass-ws-master/pom.xml
+++ b/buspass-ws-master/pom.xml
@@ -72,9 +72,14 @@
 			<artifactId>json</artifactId>
 			<version>20160810</version>
 		</dependency>
+        <dependency>
+            <groupId>com.vaadin.external.google</groupId>
+            <artifactId>android-json</artifactId>
+            <version>0.0.20131108.vaadin1</version>
+        </dependency>
 
 
-	</dependencies>
+    </dependencies>
 	<build>
 		<plugins>
 
